error_templates/java/test_files/unknown_variable_error/test.txt
template: "Java.UnknownVariableError"
---
Program.java:3: error: cannot find symbol
        System.out.println(a);
                           ^
  symbol:   variable a
  location: class Program
1 error
===
template: "Java.UnknownVariableError"
---
The program cannot find variable "a"
